syntax = "proto3";

package todo;

service TodoService{
  rpc Create(CreateDto) returns(CreateAck){};
  rpc Fetch(FetchDto) returns(FetchAck);
}

// <-- Fetch
message FetchDto{
  string user_id = 1;
}

message FetchAck{
  repeated Todo todos = 1;
}
// Fetch -->

// <-- Create
message CreateDto{
  string userId = 1;
  string title = 2;
  string content = 3;
}

message CreateAck{
  Todo todo = 1;
}
// Create -->

//<-- common section
message Todo{
  string _id = 1;
  string userId = 2;
  string title = 3;
  string content = 4;
  int32 createdAt = 5;
}
// common section -->