syntax = "proto3";

package user;
import "google/protobuf/timestamp.proto";

service UserService{
  rpc Create(UserCreateDto) returns (UserCreateAck){};
  rpc FindByNickname(FindByNicknameDto) returns (User) {};
  rpc FindById(FindByIdDto) returns (User) {}
}

enum UserRole{
  ADMIN = 0;
  NORMAL = 1;
}

message User{
  string _id = 1;
  string fullName = 2;
  string nickname = 3;
  optional string password = 4;
  UserRole role = 5;
  google.protobuf.Timestamp createdAt = 6;
}

message FindByIdDto{
  string _id = 1;
}

message FindByNicknameDto{
  string nickname = 1;
}

message UserCreateDto{
  string fullName = 1;
  string nickname = 2;
  string password = 3;
  UserRole role = 4;
}

message UserCreateAck{
  string _id = 1;
  string fullName = 2;
  string nickname = 3;
  UserRole role = 4;
  google.protobuf.Timestamp createdAt = 5;
}